[gd_scene load_steps=5 format=2]

[ext_resource path="res://PauseMenu/ItemPanel/ItemPanel.gd" type="Script" id=1]
[ext_resource path="res://OutlinedPolygon2D/OutlinedPolygon2D.gd" type="Script" id=2]
[ext_resource path="res://Item/Item.png" type="Texture" id=3]
[ext_resource path="res://SelectionsList/SelectionsList.tscn" type="PackedScene" id=4]

[node name="ItemPanel" type="Node2D"]
script = ExtResource( 1 )

[node name="Frame" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, 256, 0, 256, 432, 0, 432, 0, 0 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 128, 32 )
texture = ExtResource( 3 )
vframes = 4
hframes = 8
frame = 1

[node name="NameLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 72.0
margin_right = 224.0
margin_bottom = 98.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Item Name"
align = 1

[node name="DescLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 110.0
margin_right = 224.0
margin_bottom = 214.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Item description placeholder for an item description which goes here."
autowrap = true

[node name="SelectionsList" parent="." instance=ExtResource( 4 )]
position = Vector2( 32, 230 )
